kyverno-policies.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-capabilities
spec:
  validationFailureAction: Audit
  rules:
    - name: disallow-capabilities
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        message: "Any capabilities are disallowed"
        pattern:
          spec:
            containers:
            - securityContext:
                capabilities:
                  drop:
                    - ALL

---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-privileged-containers
spec:
  validationFailureAction: Audit
  rules:
    - name: privileged-containers
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        message: "Privileged mode is disallowed"
        pattern:
          spec:
            containers:
            - securityContext:
                privileged: "false"

---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-run-as-root-user
spec:
  validationFailureAction: Audit
  rules:
    - name: run-as-non-root
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        message: "Running as root is not allowed"
        pattern:
          spec:
            containers:
            - securityContext:
                runAsNonRoot: "true"

---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-ro-rootfs
spec:
  validationFailureAction: Audit
  rules:
    - name: validate-readOnlyRootFilesystem
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        message: "Root filesystem must be read-only"
        pattern:
          spec:
            containers:
            - securityContext:
                readOnlyRootFilesystem: true

---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-seccomp
spec:
  validationFailureAction: Audit
  rules:
    - name: check-seccomp
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        message: "seccompProfile.type must be set to `RuntimeDefault`"
        pattern:
          spec:
            containers:
            - securityContext:
                seccompProfile:
                  type: "RuntimeDefault"
